Color Picker in a Group change color Undo crash #30876

Closed
opened 2012-04-09 14:26:04 +02:00 by Moolah Nasreddin · 9 comments

%%%win32, r45474

repeatable, with some options

1st try

Load ColorPicker_Undo_Crash.blend

  • change in small 3d View to Rendered
  • click on "Refl. Ammount" color and change the color few times (not leaving Color Picker - "CP")
  • click somewhere to leave CP
  • Ctrl+Z ("Undo"). It must be not on the FIRST chosen color (maybe it's normal I don't know)
  • click on "Refl. Ammount" color and change the color few times ... till it crash

I tried on GPU rendering (Supported of course) and on CPU. Seems that on GPU it crashes quicker than on CPU.

2nd try

Reload .blend

  • select the group in nodes, Alt+G, repeat the same "spell" (change Glossy BSDF Color)... no crashing

  • select all before Material Output, Ctrl+G (Group), enter this group, connect Glossy BSDF to the left, exit the group

  • repeat "crash sequence"... it will crash but not so fast (as on the 1st try). Try to click and drag on CP after Undo - it will crash (it's a "booster")

3rd try

load *3rdTry.blend

  • repeat "crash sequence" (change any Color of the group). On my experience it crashes faster than the previous try. Here are two BSDF connected instead of one.

4th try

load *4thTry.blend Look to the group's connections...

  • repeat "crash sequence". It will crash not counting that these colours aren't acting but Cycles is still refreshing on changes.%%%
%%%win32, r45474 repeatable, with some options 1st try Load ColorPicker_Undo_Crash.blend - change in small 3d View to Rendered - click on "Refl. Ammount" color and change the color few times (not leaving Color Picker - "CP") - click somewhere to leave CP - Ctrl+Z ("Undo"). It must be not on the FIRST chosen color (maybe it's normal I don't know) - click on "Refl. Ammount" color and change the color few times ... till it crash I tried on GPU rendering (Supported of course) and on CPU. Seems that on GPU it crashes quicker than on CPU. 2nd try Reload .blend - select the group in nodes, Alt+G, repeat the same "spell" (change Glossy BSDF Color)... no crashing - select all before Material Output, Ctrl+G (Group), enter this group, connect Glossy BSDF to the left, exit the group - repeat "crash sequence"... it will crash but not so fast (as on the 1st try). Try to click and drag on CP after Undo - it will crash (it's a "booster") 3rd try load *3rdTry.blend - repeat "crash sequence" (change any Color of the group). On my experience it crashes faster than the previous try. Here are two BSDF connected instead of one. 4th try load *4thTry.blend Look to the group's connections... - repeat "crash sequence". It will crash not counting that these colours aren't acting but Cycles is still refreshing on changes.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I have not yet been able to redo the crash, but I can see from valgrind that there is a threading issue here with material preview render using data freed by undo. That would explain why the crash is affected by sort of random things, threading issues depend on timing of clicks and operations.%%%

%%%I have not yet been able to redo the crash, but I can see from valgrind that there is a threading issue here with material preview render using data freed by undo. That would explain why the crash is affected by sort of random things, threading issues depend on timing of clicks and operations.%%%

%%%Brecht, how can I traceback this? I'm not familiar with "tracebacking" so if you have some wiki (or just simple step-to-step directions) then I'll do it.%%%

%%%Brecht, how can I traceback this? I'm not familiar with "tracebacking" so if you have some wiki (or just simple step-to-step directions) then I'll do it.%%%

%%%It's not really necessary to make a backtrace, since the problem I found is likely the same issue you had, but there's some info on that here:
http://wiki.blender.org/index.php/Dev:Doc/Tools/Debugging/GDB%%%

%%%It's not really necessary to make a backtrace, since the problem I found is likely the same issue you had, but there's some info on that here: http://wiki.blender.org/index.php/Dev:Doc/Tools/Debugging/GDB%%%

%%%Brecht, I asked on BA forum "how to debug on Win XP" but still no answer. I would like to help with this but I can't install Linux (in closest two months - for sure) and I don't know what program I need to use on WinXP and what to write in console or whatever is necessary. %%%

%%%Brecht, I asked on BA forum "how to debug on Win XP" but still no answer. I would like to help with this but I can't install Linux (in closest two months - for sure) and I don't know what program I need to use on WinXP and what to write in console or whatever is necessary. %%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Missed your reply, but yes, getting a backtrace on Windows is difficult. In nearly all cases backtraces aren't very important though, if we have no way to redo it and there are no leads to investigate further, then it's useful, but in this case I had an idea where the problem was :)%%%

%%%Missed your reply, but yes, getting a backtrace on Windows is difficult. In nearly all cases backtraces aren't very important though, if we have no way to redo it and there are no leads to investigate further, then it's useful, but in this case I had an idea where the problem was :)%%%

%%%Cool :) Thank you!%%%

%%%Cool :) Thank you!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30876
No description provided.