Fix #30876, #30932: crash in material preview render after undo or file load, due to old material copies hanging around in the preview database.

This crash happened pretty randomly, but was especially noticeable when using
node groups.